--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-ktor_version=2.1.1
+ktor_version=2.1.2
 kotlin_version=1.7.10
-logback_version=1.2.11
+logback_version=1.4.3
+exposed_version=0.36.2
 kotlin.code.style=official
