--- a/app/androidCantine/src/main/AndroidManifest.xml
+++ b/app/androidCantine/src/main/AndroidManifest.xml
@@ -29,5 +29,7 @@
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
